# fintrack-import-service

./: .coverage  .gitignore  Dockerfile  Dockerfile.dev  README.md  main.py  pyproject.toml
core/: fingerprint.py  importer.py
importers/: bb.py  c6_checking.py  cibic_checking.py  cibic_savings.py  mbna.py  nu.py  pcfinancial.py  rbc.py
rabbitmq/: producer.py
routers/: import_router.py
tests/: conftest.py  test_fingerprint.py  test_import_router.py  test_importers.py
utils/: date_utils.py  logger.py
