[project]
name = "import-service"
version = "1.0.0"
description = "Parses bank CSV exports and dispatches transactions to a RabbitMQ queue for import."
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.6.2",
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "python-multipart==0.0.26",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
